# ldsc-python3

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ldsc.py  make_annot.py  munge_sumstats.py  pyproject.toml  setup.py
.github/workflows/: docker-image.yml  python-package.yml
ldsc/: jackknife.py  ldsc.py  ldscore.py  munge_sumstats.py  parse.py
ldscore/: irwls.py  jackknife.py  ldscore.py  parse.py  regressions.py  sumstats.py
test/: simulate.py  test_irwls.py  test_jackknife.py  test_ldscore.py  test_munge_sumstats.py  test_parse.py  test_regressions.py  test_sumstats.py
test/simulate_test/ldscore/: twold_firstfile.l2.ldscore
