[tool.poetry]
name = "ldsc"
version = "2.0.0"
description = "LD Score Regression (LDSC)"
authors = ["Brendan Bulik-Sullivan", "Hilary Finucane", "Thomas Reimonn <thomas.reimonn@umassmed.edu>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/abdenlab/ldsc-python3"
repository = "https://github.com/abdenlab/ldsc-python3"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
pandas = "^2.2.3"
scipy = "^1.14.1"
bitarray = "^3.0.0"
nose = "^1.3.7"

[tool.poetry.scripts]
ldsc = "ldscore.ldsc:main"
munge_sumstats = "ldscore.munge_sumstats:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"